[metadata]
description_file = README.rst

[bdist_wheel]
universal=1

[flake8]
max-line-length = 115
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    E226,
    F401,  # imported but unused
    E402,  # module level import not at top of file (for cansas.py)
    E501,
    E741,
    F401,
    F403,
    F722,  # allow Annotated[typ, some_func("some string")]
    F811,  # support typing.overload decorator
    W503,
    W504,
    W605,  # invalid escape sequences: '\*' & '\s'
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs/source

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pvWebMonitor/_version.py
versionfile_build = pvWebMonitor/_version.py
tag_prefix =
parentdir_prefix = pvWebMonitor-
